<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/login_background" />

    <ImageView
        android:id="@+id/login_header_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/login_username_layout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />


    <com.github.florent37.materialtextfield.MaterialTextField
        android:id="@+id/login_username_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:mtf_backgroundColor="@color/orange"
        app:mtf_image="@drawable/username"
        app:mtf_labelColor="@color/login_label_color"
        app:mtf_openKeyboardOnFocus="true">

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_username"
            android:inputType="text"
            android:textColor="@color/login_text_color"
            android:textSize="15sp" />
    </com.github.florent37.materialtextfield.MaterialTextField>


    <com.github.florent37.materialtextfield.MaterialTextField
        android:id="@+id/login_password_layout"
        android:layout_below="@id/login_username_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:mtf_backgroundColor="@color/orange"
        app:mtf_image="@drawable/password"
        app:mtf_labelColor="@color/login_label_color"
        app:mtf_openKeyboardOnFocus="true">

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword"
            android:textColor="@color/login_text_color"
            android:textSize="15sp" />
    </com.github.florent37.materialtextfield.MaterialTextField>

    <com.rilixtech.materialfancybutton.MaterialFancyButton
        android:layout_below="@id/login_password_layout"
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        fancy:mfb_borderColor="#FFFFFF"
        fancy:mfb_borderWidth="1dp"
        fancy:mfb_defaultColor="#7ab800"
        fancy:mfb_focusColor="#9bd823"
        fancy:mfb_radius="30dp"
        fancy:mfb_textSize="20sp"
        fancy:mfb_text="@string/login_btn"
        fancy:mfb_textColor="#FFFFFF" />

    <LinearLayout
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/login_btn"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/login_register_btn"
            android:fontFamily="bold"
            android:textColor="@color/login_link_color"
            android:text="@string/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:fontFamily="bold"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:textColor="@color/login_link_color"
            android:text="@string/login_link_sepertor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/login_fp_btn"
            android:fontFamily="bold"
            android:textColor="@color/login_link_color"
            android:text="@string/login_link_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</RelativeLayout>