<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ForgotPasswordFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/login_background" />

    <ImageView
        android:id="@+id/fp_header_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/fp_username_layout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <com.github.florent37.materialtextfield.MaterialTextField
        android:id="@+id/fp_username_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:mtf_backgroundColor="@color/orange"
        app:mtf_image="@drawable/username"
        app:mtf_labelColor="@color/login_label_color"
        app:mtf_hasFocus="true"
        app:mtf_openKeyboardOnFocus="true">

        <EditText
            android:id="@+id/fp_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_username"
            android:inputType="textPassword"
            android:textColor="@color/login_text_color"
            android:textSize="15sp" />
    </com.github.florent37.materialtextfield.MaterialTextField>


        <TextView
            android:visibility="invisible"
            android:id="@+id/fp_sq_question"
            android:layout_centerInParent="true"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/md_black_1000"
            android:textSize="25sp" />

    <com.github.florent37.materialtextfield.MaterialTextField
        android:id="@+id/fp_sq_answer_layout"
        android:layout_below="@+id/fp_sq_question"
        android:layout_width="300dp"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:mtf_backgroundColor="@color/orange"
        app:mtf_image="@drawable/sq_answer"
        app:mtf_labelColor="@color/login_label_color"
        app:mtf_openKeyboardOnFocus="true">

        <EditText
            android:id="@+id/fp_sq_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sq_hint_answer"
            android:inputType="textPassword"
            android:textColor="@color/login_text_color"
            android:textSize="15sp" />
    </com.github.florent37.materialtextfield.MaterialTextField>

    <com.github.florent37.materialtextfield.MaterialTextField
        android:id="@+id/fp_password1_layout"
        android:layout_width="300dp"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:mtf_backgroundColor="@color/orange"
        app:mtf_image="@drawable/password"
        app:mtf_labelColor="@color/login_label_color"
        app:mtf_openKeyboardOnFocus="true">

        <EditText
            android:id="@+id/fp_password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fp_password1"
            android:inputType="textPassword"
            android:textColor="@color/login_text_color"
            android:textSize="15sp" />
    </com.github.florent37.materialtextfield.MaterialTextField>


    <com.github.florent37.materialtextfield.MaterialTextField
        android:id="@+id/fp_password2_layout"
        android:layout_below="@id/fp_password1_layout"
        android:layout_width="300dp"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:mtf_backgroundColor="@color/orange"
        app:mtf_image="@drawable/password2"
        app:mtf_labelColor="@color/login_label_color"
        app:mtf_openKeyboardOnFocus="true">

        <EditText
            android:id="@+id/fp_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fp_hint_password2"
            android:inputType="textPassword"
            android:textColor="@color/login_text_color"
            android:textSize="15sp" />
    </com.github.florent37.materialtextfield.MaterialTextField>

    <com.rilixtech.materialfancybutton.MaterialFancyButton
        android:layout_below="@id/fp_password2_layout"
        android:id="@+id/fp_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        fancy:mfb_borderColor="#FFFFFF"
        fancy:mfb_borderWidth="1dp"
        fancy:mfb_defaultColor="#7ab800"
        fancy:mfb_focusColor="#9bd823"
        fancy:mfb_radius="30dp"
        fancy:mfb_textSize="20sp"
        fancy:mfb_text="@string/fp_btn_text_check"
        fancy:mfb_textColor="#FFFFFF" />

</RelativeLayout>